[package]
name = "git-lfs-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
backoff = { version = "0.4.0", features = ["tokio"] }
bytes = "1.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
file-channel.git = "https://github.com/Hakuyume/file-channel-rs.git"
futures = "0.3.31"
google-cloud-storage.git = "https://github.com/Hakuyume/google-cloud-storage-rs.git"
headers = "0.4.0"
hex = "0.4.3"
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
http-serde = "2.1.1"
humansize = "2.1.3"
hyper = "1.5.2"
hyper-rustls = { version = "0.27.5", default-features = false, features = ["http1", "http2", "rustls-native-certs", "tls12"] }
hyper-util = { version = "0.1.10", features = ["client-legacy", "http1", "http2", "tokio"] }
rustls = { version = "0.23.20", default-features = false, features = ["ring"] }
secrecy = "0.10.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sha2 = "0.10.8"
shlex = "1.3.0"
tempfile = "3.14.0"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
rand = "0.8.5"

[profile.release]
lto = true
strip = true
