[package]
name = "git-lfs-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
backoff = { version = "0.4.0", features = ["tokio"] }
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
google-cloud-storage.git = "https://github.com/Hakuyume/google-cloud-storage-rs.git"
headers = "0.4.1"
hex = "0.4.3"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
http-serde = "2.1.1"
humansize = "2.1.3"
hyper = "1.8.1"
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1", "http2", "rustls-native-certs", "tls12"] }
hyper-util = { version = "0.1.18", features = ["client-legacy", "http1", "http2", "tokio"] }
rustls = { version = "0.23.35", default-features = false, features = ["logging", "std", "ring", "tls12"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
shlex = "1.3.0"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread"] }
tower = "0.5.2"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5.7", features = ["serde"] }

[dev-dependencies]
rand = "0.9.2"

[profile.release]
lto = true
strip = true
